6700047: C2 failed in idom_no_update

Partial peeling shouldn't place clones into loop

Reviewed-by: kvn